Version 0.3
===========

03.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes
    - Fixed the problem with RT and Reply not working after tweet refresh
    - Corrected the broken design in the sidebar
    - Corrected the design for settings

01.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Replacing register link with cute image
  * Showing users instead of tweets as default
  * Design for category settings page
  * Bugfixes
    - Extended user info is now working after refresh
    - Links on the user tab refer to twitter accounts instead of local ones
    - Reply and retweet options are off if user is not logged in

02.04.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Live tweet stream
  * Fragmented caching 

30.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated to use 6 categories instead of 4

29.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Added GA code
  * Fixing layout problem with two separate columns

28.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated layout and look for members page
  * Updated layour and look for catgories page
  * Refactored users and tweets in their own partials
  * Reply and retweet functionality
  * More info for users
  * Limit tweets
  * Various cosmetic fixes

27.03.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Fixing the tweeting functionality
  * Added info with toggle function  

08.02.2010
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Removed show user page and changed all show user links to point to user's twitter profile
  * Implemented design for users page, added additional user info (name, url, location)
  * Implemented design for categories page
  * Added counter_cache subscriptions_count in lists table
  * Moved create list to right area, added notification when user is not logged in
  * Bugfix: In category show display only tweets from that category

07.02.2010
==========
