@@ -265,6 +265,7 @@
       width: 300px
 
     .tweets
+      display: block
       margin-top: 5px
 
 
@@ -287,6 +288,7 @@
     
   #draggable span, #droppable span
     background: $category_item_bg
+    color: #666
     padding: 5px
     margin-right: 8px
     line-height: 3em
