@@ -3,8 +3,8 @@
     %h2
       = link_to list.name, list
       .tabs
-        = link_to_function t('category.users'), "switch_to_users('category_#{list.id}')", :class => 'users_link selected'
-        = link_to_function t('category.tweets'), "switch_to_tweets('category_#{list.id}')", :class => 'tweets_link'
+        = link_to_function t('category.users'), "switch_to_users('category_#{list.id}')", :class => 'users_link selected', :title => t('category.users')
+        = link_to_function t('category.tweets'), "switch_to_tweets('category_#{list.id}')", :class => 'tweets_link', :title => t('category.last_tweets')
 
 
     .tweets{:id => "tweets_#{list.id}"}
