@@ -22,3 +22,4 @@
       %b= t('global.web')
       = link_to tweet.user.url, tweet.user.url
     .when= t('user.created_at', :time => time_ago_in_words(tweet.user.created_at))
+    
