@@ -18,3 +18,4 @@
       %b= t('global.web')
       = link_to user.url, user.url
     .when= t('user.created_at', :time => time_ago_in_words(user.created_at))
+   
