@@ -35,6 +35,7 @@ mk:
     create_list: "{{login}} за да креираш листа од оваа категорија"
     create_list_title: "Креирај листа од категорија"
 
+    last_tweets: "Последни твитови"
   settings:
     select_categories: "Изберете категории"
     select_categories_info: "Изберете најмногу 6 категории со влечење од првото во второто поле. Доколку се предомислите за категорија, вратете ја назад во првото поле."
